// MySQL 기준
// 음료의 사이즈/온도 제한은 애플리케이션에서 검증한다.

Enum customer_grade {
  WHITE
  BLACK
  RED
}

Enum order_status {
  PENDING
  PREPARING
  COMPLETED
  CANCELLED
}

Enum order_type {
  IN
  TOGO
  DELIVERY
}

Enum delivery_status {
  WAITING
  DELIVERING
  DELIVERED
}

Enum product_type {
  DRINK
  DESSERT
}

Enum product_category {
  COFFEE
  NON_COFFEE
  WHOLE_CAKE
  SLICE_CAKE
  BAKED_GOODS
  BREAD
}

Enum drink_size {
  REGULAR
  LARGE
  MAX
}

Enum drink_temperature {
  ICE
  HOT
}


Table customer {
  id int [pk, increment]
  name varchar(100) [not null]
  phone varchar(20) [not null, unique]
  grade customer_grade [not null, default: 'WHITE']
  joined_at datetime [not null]

  note: '회원만 저장한다. 비회원은 customer_id를 NULL로 처리한다.'
}


Table orders {
  id int [pk, increment]
  customer_id int [null, note: 'NULL = 비회원 주문']
  ordered_at datetime [not null]
  status order_status [not null, default: 'PENDING']
  order_type order_type [not null]

  note: '주문 처리 상태와 배달 상태는 별도로 관리한다.'
}


Table product {
  id int [pk, increment]
  name varchar(100) [not null, unique]
  type product_type [not null]
  category product_category [not null]
  price int [not null]
  is_sold_out boolean [not null, default: false]

  note: '음료와 디저트의 공통 상품 정보를 관리한다.'
}


Table order_item {
  id int [pk, increment]
  order_id int [not null]
  product_id int [not null]

  quantity int [not null]
  unit_price int [not null, note: '주문 시점의 최종 단가']

  size drink_size [null, note: '음료인 경우에만 사용']
  temperature drink_temperature [null, note: '음료인 경우에만 사용']

  note: '음료의 사이즈/온도 선택 가능 여부는 애플리케이션에서 검증한다.'
}


Table delivery {
  id int [pk, increment]
  order_id int [not null, unique]

  recipient_name varchar(100) [not null]
  recipient_phone varchar(20) [not null]
  address varchar(255) [not null]
  request varchar(255) [null]

  status delivery_status [not null, default: 'WAITING']

  note: 'DELIVERY 주문에 대해서만 생성한다.'
}


Ref: orders.customer_id >? customer.id
Ref: order_item.order_id > orders.id
Ref: order_item.product_id > product.id
Ref: delivery.order_id - orders.id